src/test/ui/underscore-lifetime/dyn-trait-underscore.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/dyn-trait-underscore.rs:8:20
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T>> {
   |                ---- data with this lifetime...
LL |     //                      ^^^^^^^^^^^^^^^^^^^^^ bound *here* defaults to `'static`
LL |     Box::new(items.iter())
   |     ---------------^^^^--- ...is captured and required to be `'static` here
   |
help: to permit non-static references in a `dyn Trait` value, you can add an explicit bound for the anonymous lifetime #1 defined on the function body at 6:1
   |
LL | fn a<T>(items: &[T]) -> Box<dyn Iterator<Item=&T> + '_> {
   |                                                   ^^^^

error: aborting due to previous error

